# controller_gen

./: CMakeLists.txt  README.md
.github/workflows/: cmake_windows.yml
res/: controller_gen.qrc  mainwindow.ui  resource.rc
res/installer/: controller_gen.iss.in
src/: FSEQFile.cpp  auto_updater.cpp  auto_updater.h  controller.h  mainwindow.cpp  mainwindow.h
